Remove overflow and fix z index

--- a/frontend/src/styles/Sidebar.module.css
+++ b/frontend/src/styles/Sidebar.module.css
@@ -444,6 +444,7 @@
       transition: all 0.2s ease-out;
       top: var(--top);
       left: var(--left);
+      z-index: 1;
     }
   }
 
